@@ -65,108 +65,15 @@ class SystemApplicationArchitectureTest extends AbstractArchitectureTest {
     }
 
     private static List<ArchitectureRuleAllowance> legacyApplicationServiceBoundaryAllowances() {
-        return List.of(
-                rawNoArg("METHOD_SHAPE:com.thundax.kuzhambu.system.application.auth.service."
-                        + "PreAuthSessionApplicationService.countActiveSessions()"),
-                rawNoArg("COUNT_RETURN:com.thundax.kuzhambu.system.application.auth.service."
-                        + "PreAuthSessionApplicationService.countActiveSessions()"));
-    }
-
-    private static ArchitectureRuleAllowance rawNoArg(String key) {
-        return ArchitectureRuleAllowance.of(
-                key,
-                "PreAuthSessionApplicationService.countActiveSessions is a legacy no-argument count method with an int return type.",
-                "Change the return type to primitive long and decide whether the method should be renamed to a supported no-argument read shape or accept an explicit Query.");
+        return Collections.emptyList();
     }
 
     private static List<ArchitectureRuleAllowance> legacyCommandQueryConstructionAllowances() {
         return List.of(
                 constructionViolation(
-                        "com.thundax.kuzhambu.system.application.audit.runtime.AuditLogAspect#CreateAuditLogCommand:1"),
-                constructionViolation(
-                        "com.thundax.kuzhambu.system.application.audit.runtime.sys.DepartmentAuditObjectLoader#GetDepartmentQuery:1"),
-                constructionViolation(
-                        "com.thundax.kuzhambu.system.application.audit.runtime.sys.DictAuditObjectLoader#GetDictQuery:1"),
-                constructionViolation(
-                        "com.thundax.kuzhambu.system.application.audit.runtime.sys.MenuAuditObjectLoader#GetMenuQuery:1"),
-                constructionViolation(
-                        "com.thundax.kuzhambu.system.application.audit.runtime.sys.RoleAuditObjectLoader#GetRoleQuery:1"),
-                constructionViolation(
-                        "com.thundax.kuzhambu.system.application.audit.runtime.sys.UserAuditObjectLoader#GetUserQuery:1"),
-                constructionViolation(
                         "com.thundax.kuzhambu.system.interfaces.admin.audit.controller.AuditController#PageQuery:1"),
                 constructionViolation(
-                        "com.thundax.kuzhambu.system.interfaces.admin.auth.controller.AuthController#CreatePreAuthSessionCommand:1"),
-                constructionViolation(
-                        "com.thundax.kuzhambu.system.interfaces.admin.auth.controller.AuthController#PreAuthSessionQuery:1"),
-                constructionViolation(
-                        "com.thundax.kuzhambu.system.interfaces.admin.auth.controller.AuthController#PreAuthSessionQuery:2"),
-                constructionViolation(
-                        "com.thundax.kuzhambu.system.interfaces.admin.auth.controller.AuthController#PreAuthSessionQuery:3"),
-                constructionViolation(
-                        "com.thundax.kuzhambu.system.interfaces.admin.auth.controller.AuthController#PreAuthSessionValueQuery:1"),
-                constructionViolation(
-                        "com.thundax.kuzhambu.system.interfaces.admin.auth.controller.AuthController#PreAuthSessionValueValidateQuery:1"),
-                constructionViolation(
-                        "com.thundax.kuzhambu.system.interfaces.admin.auth.controller.AuthController#PreAuthSessionValueValidateQuery:2"),
-                constructionViolation(
-                        "com.thundax.kuzhambu.system.interfaces.admin.auth.controller.AuthController#RefreshPreAuthSessionCommand:1"),
-                constructionViolation(
-                        "com.thundax.kuzhambu.system.interfaces.admin.auth.controller.AuthController#ReleasePreAuthSessionCommand:1"),
-                constructionViolation(
-                        "com.thundax.kuzhambu.system.interfaces.admin.auth.controller.AuthController#UpsertPreAuthSessionValueCommand:1"),
-                constructionViolation(
-                        "com.thundax.kuzhambu.system.interfaces.admin.auth.controller.AuthController#UpsertPreAuthSessionValueCommand:2"),
-                constructionViolation(
-                        "com.thundax.kuzhambu.system.interfaces.admin.auth.controller.AuthController#UpsertPreAuthSessionValueCommand:3"),
-                constructionViolation(
-                        "com.thundax.kuzhambu.system.interfaces.admin.auth.controller.CaptchaController#PreAuthSessionQuery:1"),
-                constructionViolation(
-                        "com.thundax.kuzhambu.system.interfaces.admin.auth.controller.CaptchaController#PreAuthSessionValueQuery:1"),
-                constructionViolation(
-                        "com.thundax.kuzhambu.system.interfaces.admin.auth.controller.CaptchaController#UpsertPreAuthSessionValueCommand:1"),
-                constructionViolation(
-                        "com.thundax.kuzhambu.system.interfaces.admin.auth.security.CurrentUserResolver#GetUserQuery:1"),
-                constructionViolation(
-                        "com.thundax.kuzhambu.system.interfaces.admin.auth.service.impl.AdminAuthServiceImpl#AdminAccessTokenQuery:1"),
-                constructionViolation(
-                        "com.thundax.kuzhambu.system.interfaces.admin.auth.service.impl.AdminAuthServiceImpl#AuthenticateIdentityCommand:1"),
-                constructionViolation(
-                        "com.thundax.kuzhambu.system.interfaces.admin.auth.service.impl.AdminAuthServiceImpl#AuthenticatePasswordCommand:1"),
-                constructionViolation(
-                        "com.thundax.kuzhambu.system.interfaces.admin.auth.service.impl.AdminAuthServiceImpl#CreateAdminAccessTokenCommand:1"),
-                constructionViolation(
-                        "com.thundax.kuzhambu.system.interfaces.admin.auth.service.impl.AdminAuthServiceImpl#DeleteAdminAccessTokenCommand:1"),
-                constructionViolation(
-                        "com.thundax.kuzhambu.system.interfaces.admin.auth.service.impl.AdminAuthServiceImpl#DeleteAdminAccessTokenCommand:2"),
-                constructionViolation(
-                        "com.thundax.kuzhambu.system.interfaces.admin.auth.service.impl.AdminAuthServiceImpl#GetUserQuery:1"),
-                constructionViolation(
-                        "com.thundax.kuzhambu.system.interfaces.admin.auth.service.impl.AdminAuthServiceImpl#InvalidateAdminSessionCommand:1"),
-                constructionViolation(
-                        "com.thundax.kuzhambu.system.interfaces.admin.auth.service.impl.AdminAuthServiceImpl#InvalidateAdminSessionCommand:2"),
-                constructionViolation(
                         "com.thundax.kuzhambu.system.interfaces.admin.auth.service.impl.AdminAuthServiceImpl#PrincipalIdentityQuery:1"),
-                constructionViolation(
-                        "com.thundax.kuzhambu.system.interfaces.admin.auth.service.impl.AdminAuthServiceImpl#RecordPrincipalLoginFailureCommand:1"),
-                constructionViolation(
-                        "com.thundax.kuzhambu.system.interfaces.admin.auth.service.impl.AdminAuthServiceImpl#RecordPrincipalLoginFailureCommand:2"),
-                constructionViolation(
-                        "com.thundax.kuzhambu.system.interfaces.admin.auth.service.impl.AdminAuthServiceImpl#RecordPrincipalLoginFailureCommand:3"),
-                constructionViolation(
-                        "com.thundax.kuzhambu.system.interfaces.admin.auth.service.impl.AdminAuthServiceImpl#RecordPrincipalLoginFailureCommand:4"),
-                constructionViolation(
-                        "com.thundax.kuzhambu.system.interfaces.admin.auth.service.impl.AdminAuthServiceImpl#RecordPrincipalLoginFailureCommand:5"),
-                constructionViolation(
-                        "com.thundax.kuzhambu.system.interfaces.admin.auth.service.impl.AdminAuthServiceImpl#RecordPrincipalLoginFailureCommand:6"),
-                constructionViolation(
-                        "com.thundax.kuzhambu.system.interfaces.admin.auth.service.impl.AdminAuthServiceImpl#RefreshAdminAccessTokenCommand:1"),
-                constructionViolation(
-                        "com.thundax.kuzhambu.system.interfaces.admin.auth.service.impl.PermissionServiceImpl#CreatePermissionsCommand:1"),
-                constructionViolation(
-                        "com.thundax.kuzhambu.system.interfaces.admin.auth.service.impl.PermissionServiceImpl#PermissionQuery:1"),
-                constructionViolation(
-                        "com.thundax.kuzhambu.system.interfaces.admin.auth.service.impl.PermissionServiceImpl#PermissionQuery:2"),
                 constructionViolation(
                         "com.thundax.kuzhambu.system.interfaces.admin.core.controller.CurrentUserController#ChangeCurrentUserAvatarCommand:1"),
                 constructionViolation(
@@ -181,8 +88,6 @@ class SystemApplicationArchitectureTest extends AbstractArchitectureTest {
                         "com.thundax.kuzhambu.system.interfaces.admin.core.controller.CurrentUserController#PreAuthSessionQuery:1"),
                 constructionViolation(
                         "com.thundax.kuzhambu.system.interfaces.admin.core.controller.CurrentUserController#PreAuthSessionValueQuery:1"),
-                constructionViolation(
-                        "com.thundax.kuzhambu.system.interfaces.admin.core.controller.CurrentUserController#PrincipalIdentityQuery:1"),
                 constructionViolation(
                         "com.thundax.kuzhambu.system.interfaces.admin.core.controller.CurrentUserController#RemoveCurrentUserAvatarCommand:1"),
                 constructionViolation(
@@ -258,15 +163,7 @@ class SystemApplicationArchitectureTest extends AbstractArchitectureTest {
                 constructionViolation(
                         "com.thundax.kuzhambu.system.interfaces.admin.core.controller.UserController#ChangeCurrentUserAvatarCommand:1"),
                 constructionViolation(
-                        "com.thundax.kuzhambu.system.interfaces.admin.core.controller.UserController#ChangePrincipalCredentialCommand:1"),
-                constructionViolation(
-                        "com.thundax.kuzhambu.system.interfaces.admin.core.controller.UserController#ChangePrincipalIdentityCommand:1"),
-                constructionViolation(
                         "com.thundax.kuzhambu.system.interfaces.admin.core.controller.UserController#ChangeUserStatusCommand:1"),
-                constructionViolation(
-                        "com.thundax.kuzhambu.system.interfaces.admin.core.controller.UserController#CreatePrincipalCredentialCommand:1"),
-                constructionViolation(
-                        "com.thundax.kuzhambu.system.interfaces.admin.core.controller.UserController#CreatePrincipalIdentityCommand:1"),
                 constructionViolation(
                         "com.thundax.kuzhambu.system.interfaces.admin.core.controller.UserController#CurrentUserAvatarQuery:1"),
                 constructionViolation(
@@ -287,12 +184,6 @@ class SystemApplicationArchitectureTest extends AbstractArchitectureTest {
                         "com.thundax.kuzhambu.system.interfaces.admin.core.controller.UserController#PreAuthSessionQuery:1"),
                 constructionViolation(
                         "com.thundax.kuzhambu.system.interfaces.admin.core.controller.UserController#PreAuthSessionValueQuery:1"),
-                constructionViolation(
-                        "com.thundax.kuzhambu.system.interfaces.admin.core.controller.UserController#PrincipalCredentialQuery:1"),
-                constructionViolation(
-                        "com.thundax.kuzhambu.system.interfaces.admin.core.controller.UserController#PrincipalIdentityQuery:1"),
-                constructionViolation(
-                        "com.thundax.kuzhambu.system.interfaces.admin.core.controller.UserController#PrincipalIdentityQuery:2"),
                 constructionViolation(
                         "com.thundax.kuzhambu.system.interfaces.admin.core.controller.UserController#RemoveCurrentUserAvatarCommand:1"),
                 constructionViolation(
